/*******************************************************************************
 * Copyright (c) 2023 IBM Corporation and others.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License 2.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-2.0/
 *
 * SPDX-License-Identifier: EPL-2.0
 *******************************************************************************/

test {
    dependsOn ':cnf:copyMavenLibs'
    doFirst {
        jvmArgs = ['--enable-preview']
    }
   jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
}
tasks.withType(JavaCompile) {
    options.release = 21
    options.compilerArgs.add('--enable-preview')
}
